spacing issues

--- a/About Page/about.css
+++ b/About Page/about.css
@@ -49,7 +49,9 @@ main {
     align-items: center;
     font-family: 'Do Hyeon', sans-serif;
     text-align: center;
-    line-height: 300%
+    line-height: 200%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 p {
@@ -79,7 +81,7 @@ p {
     main {
         text-align: center;
         margin-right: 0%;
-        margin-left: 8%;
+        margin-left: 15%;
         line-height: 100%
     }
 }
